@@ -2,7 +2,7 @@ sg3-utils (1.27-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Doug Gilbert <dgilbert@interlog.com>  Tue, 31 Mar 2009 21:00:00 -0400
+ -- Doug Gilbert <dgilbert@interlog.com>  Thu, 02 Apr 2009 15:00:00 -0400
 
 sg3-utils (1.26-0.1) unstable; urgency=low
 
