@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.27 [20090401] [svn: r242]
+Changelog for sg3_utils-1.27 [20090402] [svn: r243]
   - sg_write_same: new utility: 10, 16 and 32 byte cdb variants
   - sg_inq: sync version descriptors with spc4r18
     - add power condition VPD page
@@ -31,6 +31,7 @@ Changelog for sg3_utils-1.27 [20090401] [svn: r242]
   - sg_readcap: more protection + thin provisioning (sbc3r18)
   - sg_persist: code clean up
     - allow '--transport-id=' argument to use space as separator
+    - add '--alloc-length=' argument
   - sginfo: fix crash when 1024 sg device nodes (or more)
   - sg_ses: allow '--data=' argument to use space as separator
   - sg_senddiag: allow '--raw=' argument to use space as separator
